erDiagram
    USERS ||--o{ OFFERS : creates
    USERS ||--o{ SESSIONS : has
    USERS {
        uuid id PK
        string name
        string email UK
        string password_hash
        timestamp created_at
        timestamp updated_at
    }
    
    OFFERS ||--o{ TRANSACTIONS : generates
    OFFERS {
        uuid id PK
        uuid user_id FK
        string title
        text description
        decimal price
        string status
        timestamp created_at
        timestamp updated_at
    }
    
    SESSIONS {
        uuid id PK
        uuid user_id FK
        string token UK
        timestamp expires_at
        timestamp created_at
    }
    
    TRANSACTIONS {
        uuid id PK
        uuid offer_id FK
        uuid user_id FK
        decimal amount
        string status
        timestamp created_at
    }
